...
                        systemName: isPasswordVisible
                            ? "eye.slash"
                            : "eye"
                    )
                    .foregroundColor(theme.secondaryText)
                }
                .accessibility(label: Text(isPasswordVisible ? "Hide password" : "Show password"))
            }
            .padding(.horizontal, 16)
            .frame(height: 52)
            .background(theme.textField.background)
            .overlay(
                RoundedRectangle(cornerRadius: 10)
...
